crates/macro-tools/tests/ui/accessors/fail/legacy_field_attr.rs
use picea_macro_tools::Accessors;

#[derive(Accessors)]
struct Meta {
    #[field(get)]
    name: String,
}

fn main() {}
